--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,8 +7,11 @@ author_profile: true
 
 {% include base_path %}
 
-
+{% if site.portfolio.size == 0 %}
+<p class="notice--info" style="padding: 1em; border-left: 4px solid #0066cc; background: #f0f8ff;">Coming soon.</p>
+{% else %}
 {% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %}
+{% endif %}
 
