--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,6 +8,10 @@ redirect_from:
 ---
 
 {% include base_path %}
+
+{% if site.posts.size == 0 %}
+<p class="notice--info" style="padding: 1em; border-left: 4px solid #0066cc; background: #f0f8ff;">Coming soon.</p>
+{% else %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
@@ -17,3 +21,4 @@ redirect_from:
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
+{% endif %}
